--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://teste-041259.zapier.app/">
+  <meta http-equiv="refresh" content="0; url=https://abre.ai/uaimanu">
   <title>Redirecionando...</title>
   <script type="text/javascript">
     window.location.href = "https://teste-041259.zapier.app/";
